[4.5.x] Allow disabling default reporter for new domains via configuration (#4505)
Co-authored-by: Marcin Regulski <165262917+mregulski-gravitee@users.noreply.github.com>